--- a/index.html
+++ b/index.html
@@ -38,8 +38,8 @@
 <!-- Masthead-->
 <header class="masthead">
   <div class="container">
-    <div class="masthead-subheading">Website motto</div>
-    <div class="masthead-heading text-uppercase">Website Title</div>
+    <div class="masthead-subheading">Portfolio</div>
+    <div class="masthead-heading text-uppercase">VACHALDE Rémi</div>
     <a class="btn btn-primary btn-xl text-uppercase" href="#services">what can i do for you</a>
   </div>
 </header>
