--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
   <link href="https://fonts.googleapis.com/css?family=Roboto+Slab:400,100,300,700" rel="stylesheet" type="text/css" />
   <!-- Core theme CSS (includes Bootstrap)-->
   <link href="resources/css/style.css" rel="stylesheet" />
+  <link href="resources/css/styleFormation.css" rel="stylesheet" />
 </head>
 <body id="page-top">
 <!-- Navigation-->
@@ -36,7 +37,7 @@
   </div>
 </nav>
 <!-- Masthead-->
-<header class="masthead">
+<header class="masthead Acceuil">
   <div class="container">
     <div class="masthead-subheading">Portfolio</div>
     <div class="masthead-heading text-uppercase">VACHALDE Rémi</div>
